tests/paczka1/small_fuzzy/97892238.err
Error in line 1: YRpA6ZMZKn A93 63,90
Error in line 10: YRpA6ZMZKn A93 262,7
